# AdventOfCode2024

./: CMakeLists.txt  Solution.hh  base.cpp  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp
utils/: CMakeLists.txt  geometry.cpp  geometry.hh  utils.cpp  utils.hh  utils_time.cpp  utils_time.hh
